# morgan-cs-bots

./: .env.example  .gitignore  README.md  pyproject.toml
scholarship_internship_bot/: __init__.py  agent.py
scholarship_internship_bot/tools/: test_web_search.py  web_search.py
tutor/: __init__.py  agent.py
tutor/canvas/: __init__.py  auth.py  client.py  datastore.py  mapping.py  sync.py
tutor/student/: __init__.py  profile.py  tracker.py
tutor/tools/: __init__.py  canvas_tools.py  exam_prep_tools.py  progress_tools.py  search_tools.py  test_video_tools.py  video_tools.py
