[project]
name = "cs-tutor-scholarship-bots"
version = "0.1.0"
description = "Two ADK agents: a scholarship/internship bot with Tavily web search, and a flat-architecture tutor with Canvas LMS integration."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Google ADK + Vertex AI
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-discoveryengine>=0.11.0",
    "google-cloud-firestore>=2.14.0",
    "google-cloud-storage>=2.14.0",
    "google-api-core>=2.15.0",

    # Web search for scholarship bot (replaces google_search grounding)
    "tavily-python>=0.3.0",

    # HTTP client for Canvas LMS
    "httpx>=0.27.0",

    # Config
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tutor", "tutor.canvas", "tutor.student", "tutor.tools", "scholarship_internship_bot", "scholarship_internship_bot.tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
